# tauri-plugin-unshell

./: .gitignore  Cargo.toml
src/: lib.rs  scope.rs
